# train_kaggle_calories_ia

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
