[package]
name = "regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
ndarray = "0.16"
rand = "0.8"
smartcore = "0.3"
serde = { version = "1.0", features = ["derive"] }

xgboost = "0.1"
tpe = "0.2"  # TPE pour optimisation hyperparamètres